fix bug 931413 - Change logo alignment

--- a/media/redesign/stylus/mixins.styl
+++ b/media/redesign/stylus/mixins.styl
@@ -184,7 +184,7 @@ set-placeholder-style(prop, value) {
 /* Uses the white logo instead of color logo */
 use-white-logo() {
   #main-header .logo {
-      background: url(media-url-dir + 'mdn_logo-wordmark-full_white.svg') 0 0 no-repeat;
+      background-image: url(media-url-dir + 'mdn_logo-wordmark-full_white.svg');
   }
 }
 
