--- a/media/redesign/stylus/structure.styl
+++ b/media/redesign/stylus/structure.styl
@@ -11,7 +11,7 @@
     width: 216px;
     height: 54px;
     background-image: url(media-url-dir + 'mdn_logo-wordmark-full_color.svg');
-    background-position: 0 0;
+    background-position: -5px 0;
     background-repeat: no-repeat;
     display: block;
     float: left;
@@ -266,7 +266,7 @@ footer {
   }
 
   p {
-    background: url(media-url-dir + 'mdn_logo-only_color.svg') 0 0 no-repeat;
+    background: url(media-url-dir + 'mdn_logo-only_color.svg') -5px 0 no-repeat;
     compat-important(padding, 10px 0 0 92px);
     min-height: 62px;
   }
